src/Module/module.css
@import "../proto/base.css";

:root
{
    --controlsHeight:   24px;
    --errorBorder:      5px;
}

.default
{
    /* this needs to be a flex column for vertical alignment
    * of header w/min-height (flexbugs #3) */
    display:        flex;
    flex-direction: column;

    background:     var( --PC-WHITE );

    border-radius:  3px;

    border:         1px solid color( var( --PC-GREY ) a(12%) );

    box-shadow:     var( --boxShadow );

    .default .header:after
    {
        display:   none;
    }

    .default + .default
    {
        margin-top: -var( --spacing-3 );
    }

    .header,
    .content
    {
        position:   relative;
        margin:     0;

        padding-top:     var( --spacing-3 );
        padding-right:   var( --spacing-4 );
        padding-bottom:  var( --spacing-1 );
        padding-left:    var( --spacing-4 );
    }

    .header
    {
        transition:         background-color 200ms ease-in-out;

        position:           relative;

        display:            flex;
        flex-direction:     row;
        justify-content:    flex-start;
        align-items:        center;

        &:after
        {
            content:            '';
            position:           absolute;
            bottom:             0;
            display:            inline-block;
            width:              50px;
            height:             3px;
            background-color:   var( --PC-GREY--D15 );
        }
    }

    .content
    {
        padding-top:    var( --spacing-5 );
        padding-bottom: var( --spacing-5 );
    }

    .title
    {
        flex:       0 0 100%;
        max-width:  100%;
    }

    .controls
    {
        display:            flex;
        position:           absolute;

        height:             var( --controlsHeight );
        top:                calc( 50% - ( var( --controlsHeight ) / 2 ) );

        right:              var( --spacing-3 );

        flex-direction:     row;
        align-items:        center;
        justify-content:    flex-end;

        & > *
        {
            flex:           0 0 auto;

            margin-right:   var( --spacing-2 );
            margin-bottom:  0;

            &:last-child
            {
                margin-right:   0;
            }
        }
    }

    .loadingOverlay
    {
        display:            flex;
        flex-direction:     row;
        justify-content:    center;
        align-items:        center;

        position:           absolute;
        z-index:            9999999;

        top:                0;
        bottom:             0;
        left:               0;
        right:              0;

        width:              100%;
        height:             100%;

        background:         color( var( --PC-WHITE ) a( 50% ) );
    }
}

.level__3,
.level__4
{
    & > .header,
    & > .content
    {
        padding-top:    var( --spacing-2 );
        padding-bottom: var( --spacing-2 );
    }
}

.collapsible
{
    & > .header
    {
        cursor:         pointer;
        padding-bottom: var( --spacing-3 );

        &:after
        {
            display:    none;
        }
    }

    .default &
    {
        &:not( .collapsed ) > .header,
        &.collapsed > .header:hover
        {
            background: var( --PC-GREY--L95 );
        }
    }

    &.level__3,
    &.level__4
    {
        & > .header
        {
            padding-bottom: var( --spacing-2 );
        }
    }
}



.collapsed
{
    & > .content
    {
        display:    none;
    }
}

.moduleError
{
    border-left: var( --errorBorder ) solid var( --PC-RED );

    & > .header,
    & > .content
    {
        padding-left: calc( var( --spacing-3 ) - var( --errorBorder ) );
    }
}

